# aligned_buffer

./: Cargo.toml  rustfmt.toml
.github/: README.md
.github/workflows/: ci.yml
aligned_buffer/: Cargo.toml  README.md
aligned_buffer/src/: lib.rs
aligned_buffer_internals/: Cargo.toml  README.md
aligned_buffer_internals/src/: README.md  lib.rs
aligned_buffer_macro/: Cargo.toml  README.md
aligned_buffer_macro/src/: README.md  lib.rs
