[workspace]
members = ["aligned_buffer", "aligned_buffer_internals", "aligned_buffer_macro"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Sean C. Roach <me@seancroach.dev>"]
edition = "2021"
repository = "https://github.com/seancroach/aligned_buffer"
license = "MIT OR Apache-2.0"
keywords = ["align", "buffer", "memory", "macro", "no_std"]
categories = ["data-structures", "no-std::no-alloc"]

################################################################################
# Workspace Lints
################################################################################

[workspace.lints.rust]
missing_docs = "deny"
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
alloc_instead_of_core = "deny"
missing_safety_doc = "deny"
multiple_unsafe_ops_per_block = "deny"
pedantic = { level = "deny" }
std_instead_of_alloc = "deny"
std_instead_of_core = "deny"
undocumented_unsafe_blocks = "deny"

[workspace.dependencies.aligned_buffer_internals]
path = "aligned_buffer_internals"
version = "0.1.0"


[workspace.dependencies.aligned_buffer_macro]
path = "aligned_buffer_macro"
version = "0.1.0"
