[package]
name = "aligned_buffer"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "A crate for creating aligned buffers in Rust."
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies.aligned_buffer_internals]
workspace = true

[dependencies.aligned_buffer_macro]
workspace = true
