[package]
name = "aligned_buffer_internals"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "The internals of the `aligned_buffer` crate that require being in a separate crate."
readme = "src/README.md"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
exclude = ["README.md"]

[lints]
workspace = true
